Fix popover icon issue on Safari

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -335,7 +335,7 @@ $mobile: 426px;
 					font-weight: 500;
 					display: flex;
     				align-items: center;
-					
+
 					&>svg {
 						width: 18px;
 						margin-right: 10px;
@@ -680,7 +680,7 @@ $mobile: 426px;
 		.information-popover__button {
 			color: #c8c8c8;
 		    padding: 0;
-		    height: 18px;
+		    height: 24px;
 			min-width: 20px;
 
 			svg {
